--- a/app/public/home.html
+++ b/app/public/home.html
@@ -11,12 +11,12 @@
         <h1 class="display-4">Friend Finder</h1>
         <hr class="my-4">
         <p>Take a 10-question survey and then match with people who are similar to you!</p>
-        <a class="btn btn-primary btn-lg" href="#" role="button">Take Survey</a>
+        <a class="btn btn-primary btn-lg" href="/survey" role="button">Take Survey</a>
     </div>
     <footer style="max-width: 960px; margin: auto">
         <ul>
-            <li><a href="#">Friends API</a></li>
-            <li><a href="#">Github Repo</a></li>
+            <li><a href="/api/Friends">Friends API</a></li>
+            <li><a href="https://github.com/chemcope82/friend-finder" target="blank">Github Repo</a></li>
         </ul>
     </footer>
 </body>
