--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -4,13 +4,9 @@
     <meta charset="utf-8" />
     <title>Survey</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    <script
-        src="https://code.jquery.com/jquery-3.3.1.min.js"
-        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-        crossorigin="anonymous">
-    </script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
     <style>
         * {
             max-width: 960px;
@@ -168,7 +164,7 @@
             </div>
             <div class="modal-body">
               <h2 id="friendName"></h2>
-              <img id="friendImage" src="" alt="">
+              <img id="friendImage" src="" alt="" style="max-width: 300px">
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -192,22 +188,16 @@
             var newFriend = {
                 name: $("#name").val().trim(),
                 image: $("#image").val(),
-                q1: parseInt($("#question1").val()),
-                q2: parseInt($("#question2").val()),
-                q3: parseInt($("#question3").val()),
-                q4: parseInt($("#question4").val()),
-                q5: parseInt($("#question5").val()),
-                q6: parseInt($("#question6").val()),
-                q7: parseInt($("#question7").val()),
-                q8: parseInt($("#question8").val()),
-                q9: parseInt($("#question9").val()),
-                q10: parseInt($("#question10").val()),
+                scores:[parseInt($("#question1").val()),parseInt($("#question2").val()),parseInt($("#question3").val()),parseInt($("#question4").val()),
+                parseInt($("#question5").val()),parseInt($("#question6").val()),parseInt($("#question7").val()),parseInt($("#question8").val()),
+                parseInt($("#question9").val()),parseInt($("#question10").val()),]
             }
 
-            console.log(newFriend);
+            // console.log(newFriend);
             
-        $.post("/api/friends", newFriend).then(function(){
+        $.post("/api/friends", newFriend, function(response){
             alert("You're in the friends database now");
+            console.log(response)
             $("#name").val("");
             $("#image").val("");
             $("#question1").val("")
@@ -220,6 +210,12 @@
             $("#question8").val("")
             $("#question9").val("")
             $("#question10").val("")
+
+            $("#friendName").text(response.friend.name);
+            $("#friendImage").attr("src", response.friend.image);
+
+          $("#results-modal").modal("toggle");
+
         });
 
         });
